@@ -1,7 +1,7 @@
 package eu.wdaqua.qanary.message;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 
 import org.slf4j.Logger;
@@ -11,7 +11,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import net.sf.json.JSONObject;
 
-public class QanaryMessage extends HashMap<URL, URL> {
+public class QanaryMessage extends HashMap<URI, URI> {
 
 	/**
 	 * The serialization runtime associates with each serializable class a
@@ -29,41 +29,95 @@ public class QanaryMessage extends HashMap<URL, URL> {
 	public static final String endpointKey = "http://qanary/#endpoint";
 	// the property URI (key) for accessing the input data at the endpoint TODO:
 	// move to QanaryConfiguration
-	public static final String inGraph = "http://qanary/#inGraph";
+	public static final String inGraphKey = "http://qanary/#inGraph";
 	// the property URI (key) for inserting the output into the endpoint TODO:
 	// move to QanaryConfiguration
-	public static final String outGraph = "http://qanary/#outGraph";
+	public static final String outGraphKey = "http://qanary/#outGraph";
 
 	/**
-	 * default constructor needed for post communication
+	 * constructor fulfilling the communication requirements
+	 * 
+	 * @throws URISyntaxException
 	 */
-	public QanaryMessage() {
+	public QanaryMessage(URI endpoint, URI inGraph) throws URISyntaxException {
+		// reuse inGraph as outGraph (just for convenience)
+		this.setValues(endpoint, inGraph, inGraph);
 	}
 
-	public QanaryMessage(String jsonString) throws MalformedURLException {
+	/**
+	 * constructor fulfilling the communication requirements
+	 * 
+	 * @param endpoint
+	 * @param inGraph
+	 * @param outGraph
+	 * @throws URISyntaxException
+	 */
+	public QanaryMessage(URI endpoint, URI inGraph, URI outGraph) throws URISyntaxException {
+		this.setValues(endpoint, inGraph, outGraph);
+	}
+
+	/**
+	 * set all values for valid message
+	 * 
+	 * @param endpoint
+	 * @param inGraph
+	 * @param outGraph
+	 * @throws URISyntaxException
+	 */
+	public void setValues(URI endpoint, URI inGraph, URI outGraph) throws URISyntaxException {
+		URI keyEndpoint = new URI(endpointKey);
+		this.put(keyEndpoint, endpoint);
+
+		URI keyInGraph = new URI(inGraphKey);
+		this.put(keyInGraph, inGraph);
+
+		URI keyOutGraph = new URI(outGraphKey);
+		this.put(keyOutGraph, outGraph);
+	}
+
+	public URI getEndpoint() {
+		return this.getValue(endpointKey);
+	}
+
+	public URI getInGraph() {
+		return this.getValue(inGraphKey);
+	}
+
+	public URI getOutGraph() {
+		return this.getValue(outGraphKey);
+	}
+
+	/**
+	 * returns a URI for the given key from the map
+	 * 
+	 * @param key
+	 * @return
+	 */
+	private URI getValue(String key) {
+		try {
+			return this.get(new URI(key));
+		} catch (URISyntaxException e) {
+			// should never ever happen or the whole Qanary pipeline is broken
+			e.printStackTrace();
+			return null;
+		}
+	}
+
+	/**
+	 * parses a jsonString and sets correct values for valid Qanary message
+	 * 
+	 * @param jsonString
+	 * @throws URISyntaxException
+	 */
+	public QanaryMessage(String jsonString) throws URISyntaxException {
 		logger.info("construct QanaryMessage: {}", jsonString);
 		JSONObject json = JSONObject.fromObject(jsonString);
 
-		URL endpointKeyURL = new URL(endpointKey);
-		URL inGraphKeyURL = new URL(inGraph);
-		URL outGraphKeyURL = new URL(outGraph);
+		URI endpointValue = new URI((String) json.get(endpointKey));
+		URI inGraphValue = new URI((String) json.get(inGraphKey));
+		URI outGraphValue = new URI((String) json.get(outGraphKey));
 
-		// just for debugging
-		URL endpointValueURL = new URL((String) json.get(endpointKeyURL.toString()));
-		logger.info("construct endpoint: {}={}", endpointKeyURL, endpointValueURL);
-
-		// assign endpoint value to internal map
-		this.put(endpointKeyURL, new URL((String) json.get(endpointKeyURL.toString())));
-		logger.info("construct put endpoint value: {}", this.get(endpointKeyURL));
-
-		// assign inGraph value to internal map
-		this.put(inGraphKeyURL, new URL((String) json.get(inGraphKeyURL.toString())));
-		logger.info("construct put inGraph value: {}", this.get(inGraphKeyURL));
-
-		// assign outGraph value to internal map
-		this.put(outGraphKeyURL, new URL((String) json.get(outGraphKeyURL.toString())));
-		logger.info("construct put outGraph value: {}", this.get(outGraphKeyURL));
-
+		this.setValues(endpointValue, inGraphValue, outGraphValue);
 	}
 
 	public String asJsonString() {
